# MachineLearningProjects

EdxDeepLearning/: README.md  requirements.txt
EdxDeepLearning/ATISDataTagging/: Lab6_TextClassification_with_LSTM.ipynb  atis.test.ctf  atis.train.ctf  constants.py  trainandtestmodel.py
EdxDeepLearning/MNISTDigits/: Lab1_MNIST_DataLoader.ipynb  Lab2_LogisticRegression.ipynb  Lab3_MultiLayerPerceptron.ipynb  constants.py  loaddata.py  mystery.txt  trainmodel.py
EdxDeepLearning/SolarPanelPowerPrediction/: Lab5_RecurrentNetwork.ipynb  constants.py  loaddata.py  trainandtestmodel.py
PytorchProjectsCpp/CatClassifier/: .gitignore  CMakeLists.txt  README
PytorchProjectsCpp/CatClassifier/src/: main.cpp
